other-mpol/inject-kata-cc-runtime/.chainsaw-test/pod-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: chainsaw-coco-pod
  labels: {coco: enabled}
spec:
  runtimeClassName: kata-cc
  containers: [{name: app, image: nginx:latest}]
