other-mpol/inject-kata-cc-runtime/.chainsaw-test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: chainsaw-coco-pod
  labels: {coco: enabled}
spec:
  containers: [{name: app, image: nginx:latest}]
