other-mpol/inject-kata-cc-runtime/.chainsaw-test/runtimeclass.yaml
apiVersion: node.k8s.io/v1
kind: RuntimeClass
metadata:
  name: kata-cc
handler: kata-cc
